# pypjt

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.rst  compose.yml  package-lock.json  package.json  pyproject.toml  tox.ini
.github/actions/commit/: action.yml
.github/actions/setup-test-env/: action.yml
.github/scripts/: update_version.py
.github/workflows/: commitlint.yml  lint.yml  pre-commit.yml  pypi.yml  release.yml  test.yml
ansible/: site.yml
ansible/tasks/: copy_files.yml  run_docker.yml
docs/source/: conf.py  index.rst  quickref.rst  usage.rst
docs/source/locale/zh_CN/LC_MESSAGES/: index.po  quickref.po  usage.po
pypjt/: __init__.py  create.py
pypjt/resources/: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc  Dockerfile  MANIFEST.in  compose.yml  package.json  pyproject.toml  setup.py  tox.ini
pypjt/resources/.github/actions/setup-test-env/: action.yml
pypjt/resources/.github/scripts/: update_version.py
pypjt/resources/.github/workflows/: lint.yml  pre-commit.yml  release.yml  test.yml
pypjt/resources/ansible/: inventory.yml
pypjt/resources/ansible/tasks/: copy_env.yml  copy_files.yml  run_docker.yml
pypjt/resources/docs/source/: conf.py
pypjt/resources/requirements/: dev.txt
pypjt/resources/scripts/: git_init  pipeline  push_to_github  push_to_repo
pypjt/resources/scripts/docs/: init_docs
pypjt/resources/scripts/lib/: htmlcov_link.py
pypjt/resources/tests/: test_main.py
requirements/: base.txt  dev.txt
scripts/: git_init  init_docs  install_dep  push_to_github
scripts/docs/: make_html
scripts/lib/: htmlcov_link.py
src/pypjt/: __init__.py  create.py  pypjt.ts
src/pypjt/jslib/: index.ts
src/pypjt/jslib/uniapp/: network.ts
src/pypjt/templates/common/ansible/: ansible.cfg  inventory.yml
src/pypjt/templates/common/ansible/tasks/: copy_env.yml  copy_other_files.yml  merge_env.py  run_docker.yml
src/pypjt/templates/common/docs/source/: index.rst
src/pypjt/templates/common/scripts/: build_and_upload_to_pypi  git_init
src/pypjt/templates/common/scripts/docs/: init_docs
src/pypjt/templates/common/tests/: __init__.py
src/pypjt/templates/js_uniapp/: package.json
src/pypjt/templates/js_uniapp/src/: pages.json
src/pypjt/templates/js_uniapp/src/pages/profile/: index.vue
src/pypjt/templates/js_vue/: package.json
src/pypjt/templates/py/: pyproject.toml
templates/common/: .pre-commit-config.yaml  compose.yml
templates/common/ansible/tasks/: copy_other_files.yml  docker_prune_once.py
templates/common/docs/source/: conf.py
templates/common/scripts/: test
templates/common/scripts/docs/: make_po
templates/js_vue/: package.json
tests/: conftest.py  test_create.py
