[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pypjt"
version = "1.11.2"
authors = [
    { name = "sleeping-in-bed", email = "nyanyanyaworld@gmail.com" },
]
description = "A project to create python project template."
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "build",
    "twine",
    "coverage",
    "pytest",
    "tox",
    "mypy",
    "ruff",
    "pre-commit",
    "sphinx",
    "sphinx-autobuild",
    "jinja2",
    "python-dotenv",
    "rtoml",
    "beautifulsoup4",
    "click",
    "sphinx-intl",
    "furo",
]

[dependency-groups]
dev = [
    "types-setuptools"
]

[project.scripts]
pypjt = "pypjt:main"

[tool.pypjt]
created-by = "0.1.0"

[tool.uv]
default-groups = "all"

[tool.setuptools]
packages = ["pypjt"]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests"
]

[tool.ruff]
extend-exclude = [
    "tests/resources",
    "tests/tmp",
    "containerdata"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
exclude = [
    "tests/resources",
    "tests/tmp",
    "containerdata"
]
