[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"
[project]
name = "{{project_name}}"
version = "{{version}}"
dynamic = ["dependencies", "optional-dependencies"]
authors = [
    { name = "{{author}}", email = "{{email}}" },
]
description = "{{description}}"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]

[tool.pypjt]
created-by = "{{pypjt_version}}"

[tool.setuptools]
packages = ["{{project_name}}"]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests"
]

[tool.ruff]
extend-exclude = [
    "{{project_name}}/resources",
    "tests/resources",
    "tests/tmp",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
exclude = [
    "{{project_name}}/resources",
    "tests/resources",
    'tests/tmp',
]
