[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"
[project]
name = "{{project_name}}"
version = "{{version}}"
authors = [
    { name = "{{author}}", email = "{{email}}" },
]
description = "{{description}}"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = []

[dependency-groups]
dev = [
    "build",
    "twine",

    "coverage",
    "pytest",
    "tox",
    "mypy",
    "ruff",
    "pre-commit",

    "types-setuptools",

    "sphinx",
    "sphinx-autobuild",
    "sphinx-intl",
    "furo",

    "jinja2",
    "python-dotenv",
    "rtoml",
    "beautifulsoup4",
    "click",
]

[project.scripts]

[tool.pypjt]
created-by = "{{pypjt_version}}"

[tool.uv]
default-groups = "all"

[tool.setuptools]
packages = ["{{project_name}}"]
include-package-data = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "tests"
]

[tool.ruff]
extend-exclude = [
    "{{project_name}}/resources",
    "tests/resources",
    "tests/tmp",
    "containerdata",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
exclude = [
    "{{project_name}}/resources",
    "tests/resources",
    "tests/tmp",
    "containerdata",
]
